tests/NormalTests/paczka1/fuzzy1/59276433.err
Error in line 5: plPlMGCMmA A681 22,0
Error in line 7: XOufKIl5 S37 2,9
Error in line 14: aB4 A550 59,2
Error in line 24: plPlMGCMmA S37 54,8
